<resources>
    <string name="app_name">due.giuaky221121514122</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Võ Thị Tuyết Ngân</string>
    <string name="nav_header_subtitle">221121514122</string>
    <string name="nav_header_subtitle1">48K14.1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu content</string>
    <string name="menu_gallery">Day1_Layout</string>
    <string name="menu_slideshow">Day1_LinearLayout</string>
    <string name="menu_slideshow1">Day2_Activity</string>
    <string name="menu_slideshow2">Day2_Listview</string>
    <string name="menu_slideshow3">Day2_Listview_Advanced</string>
    <string name="menu_slideshow4">Day3_Network_Basic</string>
    <string name="menu_slideshow5">Day3_Network_RecyclerView</string>
    <string name="menu_slideshow6">Day3_Network_Weather</string>
    <string name="default_username">Trần Trung Sơn</string>

</resources>