<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu_content">

    <fragment
        android:id="@+id/nav_menu_content"
        android:name="com.example.duegiuaky221121514122.ui.MenuContent.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_day1_layout"
        android:name="com.example.duegiuaky221121514122.ui.Day1_Layout.Day1LayoutFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_day1_layout" />

    <fragment
        android:id="@+id/nav_day1_linearlayout"
        android:name="com.example.duegiuaky221121514122.ui.Day1_LinearLayout.Day1LinearLayoutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_day1_linearlayout" />
    <fragment
        android:id="@+id/nav_day2_activity_login"
        android:name="com.example.duegiuaky221121514122.ui.Day2_Activity.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_day2_login" >
        <action
            android:id="@+id/action_nav_day2_activity_login_to_nav_day2_activity_profile"
            app:destination="@id/nav_day2_activity_profile" />
    </fragment>
    <fragment
        android:id="@+id/nav_day2_activity_profile"
        android:name="com.example.duegiuaky221121514122.ui.Day2_Activity.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_day2_profile" >
        <action
            android:id="@+id/action_nav_day2_activity_profile_to_nav_day2_activity_edituser"
            app:destination="@id/nav_day2_activity_edituser" />
    </fragment>
    <fragment
        android:id="@+id/nav_day2_activity_edituser"
        android:name="com.example.duegiuaky221121514122.ui.Day2_Activity.EditUserFragment"
        android:label="Edit User"
        tools:layout="@layout/fragment_day2_edituser" />
    <fragment
        android:id="@+id/nav_day2_listview"
        android:name="com.example.duegiuaky221121514122.ui.Day2_Listview.ListViewFragment"
        android:label="List View"
        tools:layout="@layout/fragment_day2_listview" />
    <fragment
        android:id="@+id/nav_day2_listview_advanced"
        android:name="com.example.duegiuaky221121514122.ui.Day2_Listview_Advanced.ListViewFragment"
        android:label="List View"
        tools:layout="@layout/fragment_day2_listview" />
    <fragment
        android:id="@+id/nav_day3_Network_basic"
        android:name="com.example.duegiuaky221121514122.ui.Day3_Network_Basic.ListNewsFragment"
        android:label="Network"
        tools:layout="@layout/fragment_day3_activity_list_news" />
    <fragment
        android:id="@+id/nav_day3_Network_RecyclerView"
        android:name="com.example.duegiuaky221121514122.ui.Day3_Network_RecyclerView.ListNewsFragment"
        android:label="Network"
        tools:layout="@layout/fragment_day3_rc_activity_list_news" />
    <fragment
        android:id="@+id/nav_day3_Network_Weather"
        android:name="com.example.duegiuaky221121514122.ui.Day3_Network_Weather.WeatherFragment"
        android:label="Network"
        tools:layout="@layout/fragment_day3_weather_activity_list_news" />
</navigation>